style fixes in left and right panel Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -8,5 +8,7 @@
     background-size: cover;
     display: grid;
     grid-template-columns: 30% 70%;
+    overflow: hidden;
+
   }
   
