--- a/src/components/LeftPanel/leftPanel.scss
+++ b/src/components/LeftPanel/leftPanel.scss
@@ -33,12 +33,13 @@
     padding: 10px;
 
     &>img {
+        max-width: 250px;
         position: relative;
     }
 
     &>h1 {
         position: absolute;
-        font-size: 5em;
+        font-size: 4em;
         color: #000;
         font-weight: bold;
         margin: auto;
@@ -70,7 +71,6 @@
         font-family: "Roboto", sans-serif;
         font-weight: bold;
         width: 300px;
-        height: 75px;
         color: #ffffff;
         background-color: #7319a7;
         box-shadow: inset 0 -0.6em 1em -0.35em rgba(0, 0, 0, 0.17), inset 0 0.6em 2em -0.3em rgba(255, 255, 255, 0.15), inset 0 0 0em 0.05em rgba(255, 255, 255, 0.12);
